# toconline-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/agents/: api-implementor.agent.md  api-reviewer.agent.md  python-mcp-expert.agent.md  se-gitops-ci-specialist.agent.md  se-security-reviewer.agent.md  test-implementor.agent.md  test-reviewer.agent.md
.github/instructions/: agent-safety.instructions.md
.github/workflows/: ci.yml  security.yml
src/toconline_mcp/: __init__.py  app.py  auth.py  cli.py  client.py  keychain.py  server.py  settings.py
src/toconline_mcp/tools/: __init__.py  _base.py  addresses.py  auxiliary.py  contacts.py  customers.py  products.py  purchase_documents.py  purchase_payments.py  sales_documents.py  sales_receipts.py  services.py  suppliers.py
tests/: conftest.py  test_app.py  test_auth.py  test_base.py  test_cli.py  test_client.py  test_keychain.py  test_lifespan.py  test_server.py  test_settings.py
tests/tools/: conftest.py  test_addresses.py  test_auxiliary.py  test_contacts.py  test_customers.py  test_products.py  test_purchase_documents.py  test_purchase_payments.py  test_sales_documents.py  test_sales_receipts.py  test_services.py  test_suppliers.py
